--- a/agenda/templates/agenda.html
+++ b/agenda/templates/agenda.html
@@ -5,9 +5,12 @@
     <!--<b>{{ evento.titulo }} - {{ evento.data_evento }}</b>-->
     <!--para precorrer a lista de eventos-->
     <!--duas chaves imprime variáveis python, chave e porcentagem permite realizar operações python-->
+    <a href="evento/">
+        <button type="button">Novo Evento</button>
+    </a>
     <ul>
         {% for evento in eventos %}
-            <li>{{ evento.titulo }} - {{ evento.get_data_evento }}</li><!--chama a função ao inves do valor direto-->
+            <li>{{ evento.titulo }} - {{ evento.data_evento }}</li><!--chama a função ao inves do valor direto-->
         {% endfor %}
     </ul>
 {% endblock %}
