--- a/agenda/templates/model-header.html
+++ b/agenda/templates/model-header.html
@@ -1,3 +1,6 @@
     <meta charset="UTF-8">
     <title>Agenda</title>
+    <div align='right' style='margin-right: 20px; margin-top: 20px;'>
+        <a href="/logout">Logout</a>
+    </div>
     <h1>Agenda</h1>
