--- a/agenda/templates/agenda.html
+++ b/agenda/templates/agenda.html
@@ -10,7 +10,11 @@
     </a>
     <ul>
         {% for evento in eventos %}
-            <li>{{ evento.titulo }} - {{ evento.data_evento }}</li><!--chama a função ao inves do valor direto-->
+            <li>{{ evento.titulo }} - {{ evento.data_evento }}<!--chama a função ao inves do valor direto-->
+                (<a href="evento/?id={{ evento.id }}">Editar</a>/ <!--passa a url com o id do evento-->
+                 <a href="evento/delete/{{ evento.id }}/">Excluir</a>)
+            </li>
+
         {% endfor %}
     </ul>
 {% endblock %}
