--- a/agenda/templates/evento.html
+++ b/agenda/templates/evento.html
@@ -7,7 +7,8 @@
     <form action="submit" method="POST">{% csrf_token %}
         <label>Título: </label>
         <br>
-        <input type="text" name="titulo" size="31">
+        <input type="number" name="id_evento" value="{{ evento.id }}" hidden>
+        <input type="text" name="titulo" size="31" value="{{ evento.titulo }}">
         <br>
         <label>Data do Evento: </label>
         <br>
@@ -15,7 +16,7 @@
         <br>
         <label>Descrição: </label>
         <br>
-        <textarea name="descricao" rows="5" cols="24"></textarea>
+        <textarea name="descricao" rows="5" cols="24">{{ evento.descricao }}</textarea>
         <br>
         <button type="submit">Salvar</button>
         <a href="/">
